develop nn regressor

--- a/notebooks/Forest Fire Regression Experiment.ipynb
+++ b/notebooks/Forest Fire Regression Experiment.ipynb
@@ -154,7 +154,7 @@
     "from sklearn.model_selection import train_test_split as split_data\n",
     "\n",
     "# Grab data from UCI Archive\n",
-    "df = pd.read_csv(\"./data/forest-fires.csv\")\n",
+    "df = pd.read_csv(\"../data/forest-fires.csv\")\n",
     "df.columns = [ \"x_coord\", \"y_coord\", \"month\", \"day\", \"ffmc\", \"dmc\", \"dc\", \"isi\", \"temp\",\n",
     "              \"rh\", \"wind\", \"rain\", \"area\" ]\n",
     "\n",
